--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -3281,10 +3281,22 @@
             },
             {
                   "cell_type": "code",
-                  "execution_count": 47,
+                  "execution_count": 1,
                   "id": "30ca9d5b-1ae9-468e-992b-5cdea04c1ef0",
                   "metadata": {},
-                  "outputs": [],
+                  "outputs": [
+                        {
+                              "ename": "NameError",
+                              "evalue": "name 'final_pred' is not defined",
+                              "output_type": "error",
+                              "traceback": [
+                                    "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+                                    "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+                                    "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m final_pred\u001b[39m.\u001b[39mto_csv(\u001b[39m'\u001b[39m\u001b[39mfinal_prediction_data.csv\u001b[39m\u001b[39m'\u001b[39m, index \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m)\n",
+                                    "\u001b[1;31mNameError\u001b[0m: name 'final_pred' is not defined"
+                              ]
+                        }
+                  ],
                   "source": [
                         "final_pred.to_csv('final_prediction_data.csv')"
                   ]
